--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -34,7 +34,7 @@
 @color-real-tv: #c4df80;
 @color-game: #4251fd;
 @color-talk-show: #d6ab8c;
-@color-baby: #78e6c7;
+@color-children: #00add3;
 @color-blue-27: #274879;
 @color-pink-cb: #cb4a78;
 @color-green-69: #69f0ae;
