--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -2,29 +2,52 @@
 @import '../../../assets/styles/themes/base/common/shared';
 
 .banner {
-  position: relative;
-  background: #1b1b1b;
-  color: white;
-
+  background: @color-gray-1b;
+  color: @color-white-ff;
+  &__container {
+    position: relative;
+    max-width: 1600px;
+    margin: 0 auto;
+  }
   &__slide {
     display: grid;
     grid-template-columns: auto 296px auto;
     padding: 24px 80px;
     column-gap: 40px;
     grid-template-areas: 'main poster description';
+    @media screen and (max-width: 1100px) {
+      grid-template-areas: 'poster main' 'description description';
+      grid-template-columns: 160px auto;
+    }
+    @media screen and (max-width: 600px) {
+      padding: 24px 16px;
+      grid-template-areas: 'poster' 'main' 'description';
+      grid-template-columns: auto;
+    }
   }
-
-  &__name-ru {
+  &__main-info {
+    grid-area: main;
+  }
+  &__name-main {
     margin-top: 40px;
     margin-bottom: 32px;
     font-size: 40px;
     line-height: 56px;
+    @media screen and (max-width: 1200px) {
+      font-size: 24px;
+      line-height: 40px;
+      margin-top: 16px;
+    }
   }
 
   &__name-en {
-    margin-bottom: 36px;
+    margin-bottom: 32px;
     font-size: 24px;
     line-height: 32px;
+    @media screen and (max-width: 1200px) {
+      font-size: 20px;
+      line-height: 28px;
+    }
   }
 
   &__genres {
@@ -33,11 +56,19 @@
   }
 
   &__poster {
+    grid-area: poster;
     width: 296px;
     height: 444px;
     border-radius: 16px;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25), 1px -1px 8px rgba(0, 0, 0, 0.25);
     overflow: hidden;
+    @media screen and (max-width: 1100px) {
+      width: 160px;
+      height: 241px;
+    }
+    @media screen and (max-width: 600px) {
+      margin: 0 auto;
+    }
   }
 
   &__poster-image {
@@ -47,231 +78,51 @@
   }
 
   &__description {
-    margin-top: 46px;
-    width: 320px;
+    grid-area: description;
+    font-size: 18px;
+    line-height: 32px;
 
     &-row {
       display: flex;
       justify-content: space-between;
-      line-height: 60px;
-    }
-
-    &-title {
-      font-size: 17px;
-      color: rgb(167, 167, 167);
+      margin-top: 32px;
     }
 
     &-info {
-      font-size: 18px;
-      color: white;
-      flex-wrap: wrap;
-
-      &._rating {
-        background: #ffffff;
-        border-radius: 17px;
-        color: black;
-        padding: 0.5px 15px;
-      }
+      text-align: right;
+      padding-left: 24px;
     }
   }
-
+  &__rating {
+    background: @color-white-ff;
+    border-radius: 16px;
+    color: @color-black-00;
+    padding: 0px 20px;
+    font-size: 24px;
+    line-height: 36px;
+  }
   &__arrow {
     width: 25px;
     height: 25px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    fill: #fff;
+    transform: translateY(-50%) rotate(180deg);
     cursor: pointer;
+    left: 20px;
+    stroke: @color-white-ff;
 
-    &-right {
-      right: 30px;
+    @media screen and (max-width: 600px) {
+      display: none;
     }
 
-    &-left {
-      left: 30px;
+    &:hover {
+      stroke: @color-green-69;
+    }
+
+    &._right {
+      transform: translateY(-50%);
+      right: 20px;
+      left: initial;
     }
   }
 }
-//.banner {
-//  @media screen and (max-width: 1400px) {
-//    &__name-ru {
-//      font-size: 30px;
-//    }
-//
-//    &__poster-image {
-//      margin-top: 40px;
-//      height: 80%;
-//    }
-//
-//    &__description {
-//      grid-template-columns: 100px 140px;
-//
-//      &-title {
-//        font-size: 15px;
-//      }
-//
-//      &-info {
-//        font-size: 16px;
-//
-//        &._icon {
-//          margin-left: 95px;
-//        }
-//      }
-//    }
-//  }
-//  @media screen and (max-width: 1230px) {
-//    &__slide {
-//      grid-template-columns: 3fr 2fr 3fr;
-//    }
-//  }
-//  @media screen and (max-width: 1000px) {
-//    &__name-ru {
-//      margin-top: 60px;
-//      font-size: 28px;
-//      margin-bottom: 25px;
-//    }
-//
-//    &__name-en {
-//      margin-bottom: 30px;
-//    }
-//
-//    &__poster {
-//      width: 206px;
-//      height: 406px;
-//    }
-//
-//    &__poster-image {
-//      margin-top: 60px;
-//    }
-//  }
-//  @media screen and (max-width: 928px) {
-//    &__poster {
-//      width: 186px;
-//      height: 386px;
-//    }
-//
-//    &__poster-image {
-//      margin-top: 70px;
-//    }
-//
-//    &__description {
-//      grid-template-columns: 110px 120px;
-//
-//      &-info {
-//        &._icon {
-//          margin-left: 75px;
-//        }
-//      }
-//    }
-//  }
-//  @media screen and (max-width: 875px) {
-//    &__slide {
-//      padding: 5px 60px 5px 60px;
-//      flex-direction: column;
-//      grid-template-columns: none;
-//    }
-//
-//    &__main-info {
-//      flex-grow: 1;
-//      width: 100%;
-//    }
-//
-//    &__name-ru {
-//      margin-top: 15px;
-//      font-size: 20px;
-//      margin-bottom: 10px;
-//    }
-//
-//    &__name-en {
-//      font-size: 17px;
-//      margin-bottom: 10px;
-//    }
-//
-//    &__poster {
-//      margin: 0 auto 0 auto;
-//      width: 159px;
-//      height: 244px;
-//    }
-//
-//    &__poster-image {
-//      margin-top: 1px;
-//      margin-bottom: 3px;
-//      height: 100%;
-//    }
-//
-//    &__genres {
-//      width: 95%;
-//    }
-//
-//    &__description {
-//      margin: 0 auto 0 auto;
-//      grid-template-columns: 150px 160px;
-//      grid-template-rows: 32px 32px 32px 32px;
-//
-//      &-title {
-//        font-size: 14px;
-//      }
-//
-//      &-info {
-//        font-size: 15px;
-//
-//        &._rating {
-//          width: 45px;
-//          height: 30px;
-//        }
-//
-//        &._icon {
-//          margin-left: 120px;
-//        }
-//      }
-//    }
-//  }
-//  @media screen and (max-width: 580px) {
-//    &__name-ru {
-//      margin-top: 10px;
-//      font-size: 17px;
-//      margin-bottom: 5px;
-//    }
-//
-//    &__name-en {
-//      font-size: 12px;
-//      margin-bottom: 6px;
-//    }
-//
-//    &__poster {
-//      width: 149px;
-//      height: 224px;
-//    }
-//
-//    &__description {
-//      grid-template-columns: 140px 150px;
-//
-//      &-title {
-//        font-size: 13px;
-//      }
-//
-//      &-info {
-//        font-size: 13px;
-//
-//        &._icon {
-//          margin-left: 110px;
-//          grid-template-rows: 22px 22px 22px 22px;
-//        }
-//      }
-//    }
-//  }
-//  @media screen and (max-width: 388px) {
-//    &__slide {
-//      padding: 2px 6px 2px 6px;
-//    }
-//    &__description {
-//      grid-template-columns: 130px 140px;
-//      &-info {
-//        &._icon {
-//          margin-left: 100px;
-//        }
-//      }
-//    }
-//  }
-//}
