--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -119,11 +119,11 @@
   &._talk-show {
     background-color: @color-talk-show;
   }
-  &._baby {
-    background-color: @color-baby;
+  &.children {
+    background-color: @color-children;
   }
 }
-@media screen and (max-width: 1230px) {
+@media screen and (max-width: 1200px) {
   .genre-label {
     font-size: 16px;
     padding: 3px 28px;
