--- a/apps/ux-films-finder/src/app/components/category/category.component.html
+++ b/apps/ux-films-finder/src/app/components/category/category.component.html
@@ -19,6 +19,7 @@
   </div>
 
   <mat-paginator
+    *ngIf="(films$ | async)?.total as total"
     class="category__paginator"
     [length]="(films$ | async)?.total"
     [pageSize]="pageSize"
