--- a/apps/ux-films-finder/src/app/components/movie-cadr/movie-cadr.component.less
+++ b/apps/ux-films-finder/src/app/components/movie-cadr/movie-cadr.component.less
@@ -1,7 +1,7 @@
-@import '../../../assets/styles/themes/dark/common/shared';
+@import '../../../assets/styles/themes/base/common/shared';
 .movie-cadr {
   position: relative;
-
+  overflow: hidden;
   &__image {
     object-fit: contain;
     max-width: 90vw;
@@ -10,20 +10,22 @@
   }
   &__arrows {
     position: absolute;
-    bottom: 50%;
+    top: 50%;
+    transform: translate(0, -50%);
     width: 100%;
     display: flex;
     justify-content: space-between;
     justify-items: center;
     cursor: pointer;
     user-select: none;
+    padding: 0 24px;
   }
   &__arrow {
     height: 64px;
     width: 64px;
-    margin: 0 40px;
     stroke: @color-white-ff;
     fill: none;
+
     &._right-arrow {
       transform: rotate(0.5turn);
     }
