--- a/apps/ux-films-finder/src/app/components/sidenav-list/sidenav-list.component.less
+++ b/apps/ux-films-finder/src/app/components/sidenav-list/sidenav-list.component.less
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    color: #ffffff;
+    color: @color-white-ff;
     cursor: pointer;
     text-decoration: none;
     overflow: hidden;
@@ -32,7 +32,7 @@
     line-height: 22px;
     font-weight: 400;
     height: 69px;
-    background: #494949;
+    background: @color-gray-49;
   }
 }
 .theme-dark {
