--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -34,12 +34,8 @@
     margin: 20px;
   }
 
-  &__first-line,
-  &__second-line,
-  &__third-line,
   &__text:hover {
-    color: white;
-    border-color: none;
+    color: @color-white-ff;
   }
 
   &__first-line {
@@ -70,7 +66,7 @@
     width: 600px;
     margin-top: 10px;
     margin-left: 15px;
-    color: white;
+    color: @color-white-ff;
   }
 
   &__link {
@@ -80,7 +76,6 @@
     background: none;
     text-decoration: none;
     color: white;
-    font-family: ABeeZee;
   }
 
   &__link:hover {
@@ -106,7 +101,7 @@
     height: 50px;
     font-size: 50px;
     margin-right: 34px;
-    color: white;
+    color: @color-white-ff;
   }
 
   &__search {
@@ -279,12 +274,8 @@
       border-color: @color-green-69;
     }
     &__link,
-    &__text {
-      color: @color-green-69;
-    }
-    &__search-icon-hidden {
-      color: @color-green-69;
-    }
+    &__text,
+    &__search-icon-hidden,
     &__navigation {
       color: @color-green-69;
     }
