--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -4,10 +4,21 @@
 
 @color-white-ff: #ffffff;
 
+@color-gray-1b: #1b1b1b;
+
+@color-gray-30: #303030;
+
+@color-gray-42: #424242;
+
+@color-gray-ac: #acacac;
+
+@color-gray-0E: #e0e1e3;
+
+@color-green-69: #69f0ae;
+
+@color-green-04: #048e4b;
+
 @color-blue-27: #274879;
 
 @color-pink-cb: #cb4a78;
 
-@color-green-69: #69f0ae;
-
-@color-gray-1b: #1b1b1b;
