--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -1,4 +1,5 @@
 <div class="film-details">
+  <div class="stripe"></div>
   <ng-container *ngIf="filmInfo">
     <div class="film-details__main-info">
       <img
@@ -6,6 +7,14 @@
         alt="poster Url Preview"
         class="film-details__img"
       />
+
+      <div class="film-details__info _feature _ratingImdb">
+        <div class="film-details__info _feature _feature-title">Рейтинг</div>
+        <div class="film-details__info _feature _ratingImdb-number">
+          {{ filmInfo?.ratingImdb }}
+        </div>
+      </div>
+
       <div class="film-details__info">
         <div class="film-details__info _title">
           <ng-container *ngIf="filmInfo.nameRu; else originalNameTemplate">{{
@@ -15,6 +24,34 @@
             {{ filmInfo?.nameOriginal }}
           </ng-template>
         </div>
+
+        <div class="film-details__info _feature _filmLength">
+          <div class="film-details__info _feature _feature-title">
+            Длительность
+          </div>
+          <div class="film-details__info _feature _filmLength-number">
+            {{ filmInfo?.filmLength + ' минут' }}
+          </div>
+        </div>
+
+        <div class="film-details__info _feature _countries">
+          <div class="film-details__info _feature _feature-title">Страна</div>
+          <ng-container *ngFor="let countryItem of filmInfo?.countries">
+            <div class="film-details__info _feature _countries-names">
+              {{ countryItem.country }}
+            </div>
+          </ng-container>
+        </div>
+
+        <div class="film-details__info _feature _year">
+          <div class="film-details__info _feature _year _feature-title">
+            Год выпуска
+          </div>
+          <div class="film-details__info _feature _year _year-date">
+            {{ filmInfo?.year }}
+          </div>
+        </div>
+
         <div class="film-details__info _feature">
           <div class="film-details__info _feature _type">
             <div class="film-details__info _feature _type _feature-title">
@@ -24,30 +61,7 @@
               {{ filmInfo?.type }}
             </div>
           </div>
-          <div class="film-details__info _feature _year">
-            <div class="film-details__info _feature _year _feature-title">
-              Год
-            </div>
-            <div class="film-details__info _feature _year _year-date">
-              {{ filmInfo?.year }}
-            </div>
-          </div>
-          <div class="film-details__info _feature _ratingImdb">
-            <div class="film-details__info _feature _feature-title">
-              Рейтинг Imdb
-            </div>
-            <div class="film-details__info _feature _ratingImdb-number">
-              {{ filmInfo?.ratingImdb }}
-            </div>
-          </div>
-          <div class="film-details__info _feature _filmLength">
-            <div class="film-details__info _feature _feature-title">
-              Длительность
-            </div>
-            <div class="film-details__info _feature _filmLength-number">
-              {{ filmInfo?.filmLength + ' минут' }}
-            </div>
-          </div>
+
           <div class="film-details__info _feature _genres">
             <div class="film-details__info _feature _feature-title">Жанр</div>
 
@@ -58,22 +72,6 @@
             </ng-container>
           </div>
 
-          <div class="film-details__info _feature _countries">
-            <div class="film-details__info _feature _feature-title">Страна</div>
-            <ng-container *ngFor="let countryItem of filmInfo?.countries">
-              <div class="film-details__info _feature _countries-names">
-                {{ countryItem.country }}
-              </div>
-            </ng-container>
-          </div>
-          <ng-container *ngIf="filmInfo.slogan"
-            ><div class="film-details__info _feature _slogan">
-              <div class="film-details__info _feature _slogan _feature-title">
-                Слоган
-              </div>
-              {{ filmInfo?.slogan }}
-            </div>
-          </ng-container>
           <ng-container *ngIf="filmInfo.description">
             <div class="film-details__info _feature _description">
               <div
