--- a/apps/ux-films-finder/src/app/components/details/details.component.less
+++ b/apps/ux-films-finder/src/app/components/details/details.component.less
@@ -2,6 +2,7 @@
 .film-details {
   display: flex;
   flex-direction: column;
+
   &__main-info {
     display: flex;
     flex-direction: row;
@@ -9,13 +10,17 @@
     line-height: 40px;
     text-align: start;
   }
+
   &__img {
-    width: 450px;
-    height: 600px;
-    margin-right: 8%;
+    width: 335px;
+    height: 501px;
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25))
+      drop-shadow(1px -1px 8px rgba(0, 0, 0, 0.25));
   }
+
   &__info {
     font-size: 24px;
+
     &._title {
       font-size: 48px;
       font-weight: bold;
@@ -23,14 +28,17 @@
       line-height: 48px;
       letter-spacing: -0.5px;
     }
+
     &._feature {
       display: flex;
       flex-direction: column;
       margin-top: 10px;
     }
+
     &._genres-name {
       padding: 8px;
     }
+
     &._type,
     ._year,
     ._ratingImdb,
@@ -40,14 +48,65 @@
       grid-template-columns: 2fr 2fr;
       align-items: flex-end;
     }
+    ._ratingImdb {
+      position: absolute;
+      width: 73px;
+      height: 42px;
+      left: 472px;
+      top: 358px;
+
+      font-family: 'Bellota Text';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 42px;
+
+      display: flex;
+      align-items: center;
+      text-align: center;
+
+      /* gray middle */
+
+      color: #494949;
+    }
     ._genres {
       display: grid;
       grid-template-columns: 2fr 2fr;
     }
+
     &._feature-title {
       font-weight: bold;
       font-size: 32px;
     }
+
+    &__stripe {
+      position: absolute;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background: #e0e1e3;
+      width: 100%;
+      height: 160px;
+      z-index: -1;
+      &:after,
+      &:before {
+        content: '';
+        display: flex;
+        width: 73px;
+        height: 100%;
+        background: url('../../../assets/images/triangles.svg') no-repeat;
+      }
+      &:before {
+        transform: rotate(0.5turn);
+      }
+    }
+
+    &__relation {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      margin-bottom: 16px;
+    }
+
     &._description,
     &._slogan {
       flex-direction: column;
@@ -55,6 +114,7 @@
     }
   }
 }
+
 @media only screen and (max-width: 820px) {
   .film-details {
     display: flex;
@@ -62,17 +122,21 @@
     justify-content: center;
     margin: 0 16px;
     line-height: 24px;
+
     &__img {
       width: 250px;
       height: 400px;
       margin: 0 8%;
     }
+
     &__info {
       font-size: 16px;
+
       &._title {
         font-size: 24px;
         font-weight: bold;
       }
+
       &._feature {
         display: flex;
         flex-direction: column;
@@ -84,6 +148,7 @@
         font-size: 16px;
         line-height: 24px;
       }
+
       &._type,
       ._year,
       ._ratingImdb,
@@ -94,6 +159,7 @@
         grid-template-columns: 2fr 2fr;
         align-items: flex-end;
       }
+
       &._description,
       &._slogan {
         flex-direction: column;
