--- a/apps/ux-films-finder/src/app/components/similar-films/similar-films.component.less
+++ b/apps/ux-films-finder/src/app/components/similar-films/similar-films.component.less
@@ -1,49 +1,79 @@
 @import '../../../assets/styles/themes/base/common/shared';
+@import '../../../assets/styles/themes/dark/common/shared';
+@import (inline) 'keen-slider/keen-slider.min.css';
 
 .similar-films {
-  width: 100%;
-  height: 650px;
-  background-color: @color-gray-66;
   margin-bottom: 100px;
   padding: 10px 50px 10px 50px;
   &__title {
     text-align: center;
-    color: white;
-    font-size: 25px;
+    color: @color-black-00;
+    font-size: 32px;
   }
-  &__slider {
+  &__card-container {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    overflow: auto; //TODO: overflow: auto?
     padding: 20px;
+    justify-content: center;
   }
-  &__slider::-webkit-scrollbar {
-    display: none; //TODO: Hide scrollbar?
-  }
-  &__card {
-    box-shadow: 0px 0px 20px black;
+  &__card-link {
+    display: inline-block;
   }
   &__dots {
     display: flex;
-    height: 100px;
-    padding: 10px 0;
     justify-content: center;
+
+    @media only screen and (max-width: 600px) {
+      display: none;
+    }
+
+    &._inactive {
+      display: none;
+    }
+  }
+  &__dots {
+    margin: 20px;
   }
   &__dot {
     border: none;
-    width: 10px;
-    height: 10px;
-    background: #c5c5c5;
+    width: 20px;
+    height: 20px;
+    background: @color-gray-66;
     border-radius: 50%;
     margin: 0 5px;
     padding: 5px;
     cursor: pointer;
+
+    &:focus {
+      outline: none;
+      background: @color-pink-cb;
+    }
+    &.active {
+      background: @color-pink-cb;
+    }
+    &:hover {
+      background: @color-green-69;
+    }
   }
-  &:focus {
-    outline: none;
-  }
-  &.active {
-    background: #000;
+}
+
+.theme-dark {
+  & .similar-films {
+    &__title {
+      color: @color-gray-0E;
+    }
+    &__dot {
+      background: @color-gray-ac;
+
+      &:focus {
+        outline: none;
+        background: @color-pink-cb;
+      }
+      &.active {
+        background: @color-pink-cb;
+      }
+      &:hover {
+        background: @color-green-69;
+      }
+    }
   }
 }
