--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -22,7 +22,6 @@
 @color-detective: #a43370;
 @color-fiction: #6b5858;
 @color-western: #30353a;
-@color-music: #a7e43d;
 @color-musical: #571610;
 @color-sport: #65de74;
 @color-documentary: #163200;
@@ -35,6 +34,7 @@
 @color-game: #4251fd;
 @color-talk-show: #d6ab8c;
 @color-children: #00add3;
+@color-music: #192241;
 @color-blue-27: #274879;
 @color-pink-cb: #cb4a78;
 @color-green-69: #69f0ae;
