--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -1,7 +1,7 @@
 @import 'keen-slider/keen-slider.min.css';
 @import '../../../assets/styles/themes/base/common/shared';
 
-.banner {
+.film-banner {
   background: @color-gray-1b;
   color: @color-white-ff;
   &__container {
