--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.less
@@ -14,113 +14,113 @@
   display: inline-block;
 
   &._comedy {
-    background-color: @color-comedy;
+    background-color: @color-genre-comedy;
   }
 
   &._horror {
-    background-color: @color-horror;
+    background-color: @color-genre-horror;
   }
 
   &._adventures {
-    background-color: @color-adventures;
+    background-color: @color-genre-adventures;
   }
 
   &._thriller {
-    background-color: @color-thriller;
+    background-color: @color-genre-thriller;
   }
 
   &._melodrama {
-    background-color: @color-melodrama;
+    background-color: @color-genre-melodrama;
   }
 
   &._fantasy {
-    background-color: @color-fantasy;
+    background-color: @color-genre-fantasy;
   }
 
   &._action {
-    background-color: @color-action;
+    background-color: @color-genre-action;
   }
 
   &._family {
-    background-color: @color-family;
+    background-color: @color-genre-family;
   }
 
   &._drama {
-    background-color: @color-drama;
+    background-color: @color-genre-drama;
   }
 
   &._crime {
-    background-color: @color-crime;
+    background-color: @color-genre-crime;
   }
 
   &._cartoon {
-    background-color: @color-cartoon;
+    background-color: @color-genre-cartoon;
   }
 
   &._anime {
-    background-color: @color-anime;
+    background-color: @color-genre-anime;
   }
 
   &._military {
-    background-color: @color-military;
+    background-color: @color-genre-military;
   }
 
   &._history {
-    background-color: @color-history;
+    background-color: @color-genre-history;
   }
 
   &._biography {
-    background-color: @color-biography;
+    background-color: @color-genre-biography;
   }
 
   &._detective {
-    background-color: @color-detective;
+    background-color: @color-genre-detective;
   }
 
   &._fiction {
-    background-color: @color-fiction;
+    background-color: @color-genre-fiction;
   }
   &._western {
-    background-color: @color-western;
+    background-color: @color-genre-western;
   }
   &._musical {
-    background-color: @color-musical;
+    background-color: @color-genre-musical;
   }
   &._sport {
-    background-color: @color-sport;
+    background-color: @color-genre-sport;
   }
   &._documentary {
-    background-color: @color-documentary;
+    background-color: @color-genre-documentary;
   }
   &._short-film {
-    background-color: @color-short-film;
+    background-color: @color-genre-short-film;
   }
   &._news {
-    background-color: @color-news;
+    background-color: @color-genre-news;
   }
   &._concert {
-    background-color: @color-concert;
+    background-color: @color-genre-concert;
   }
   &._for-adults {
-    background-color: @color-for-adults;
+    background-color: @color-genre-for-adults;
   }
   &._ceremony {
-    background-color: @color-ceremony;
+    background-color: @color-genre-ceremony;
   }
   &._real-tv {
-    background-color: @color-real-tv;
+    background-color: @color-genre-real-tv;
   }
   &._game {
-    background-color: @color-game;
+    background-color: @color-genre-game;
   }
   &._talk-show {
-    background-color: @color-talk-show;
+    background-color: @color-genre-talk-show;
   }
   &.children {
-    background-color: @color-children;
+    background-color: @color-genre-children;
   }
   &._music {
-    background-color: @color-music;
+    background-color: @color-genre-music;
   }
 }
 @media screen and (max-width: 1200px) {
